# ProveML

./: .gitignore  .ocamlformat  Makefile  ProveML.opam  README.md  dune-project  opendoc.sh
lib/: cnf.ml  cnf.mli  dune  parse.ml  parse.mli  printer.ml  printer.mli  prop.ml  prop.mli  resolution.ml  resolution.mli
src/: ast.ml  ast.mli  cnf.ml  prop.ml
test/: ProveML.ml  dune
