(lang dune 3.7)

(name ProveML)

(generate_opam_files true)

(source
 (github ArnavAgrawal03/ProveML))

(authors "Arnav Agrawal")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ProveML)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune yojson)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
